# bonsai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
Formula/: bonsai.rb
docs/: homebrew-release.md
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: commands.md  configuration.md  install.md  intro.md  quickstart.md  running-apps.md  shell-integration.md  troubleshooting.md  urls-and-ports.md  workspace-views.md  worktrees.md
docs-site/scripts/: generate-cli-reference.js
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  (+1 more)
docs/design/: parallel-agents.md
scripts/: release.py
src/bonsai/: __main__.py  agent.py  caddy.py  cli.py  command_results.py  compose.py  config.py  doctor.py  env.py  errors.py  git.py  logs.py  models.py  onboarding.py  picker.py  port_repair.py  ports.py  process.py  registry.py  rendering.py  slug.py  state.py  status.py  templates.py  workflows.py  workspace.py  workspace_facts.py
tests/: conftest.py  test_caddy_boot.py  test_cli.py  test_command_results.py  test_compose.py  test_config.py  test_doctor.py  test_formula.py  test_logs.py  test_multiplexers.py  test_onboarding.py  test_picker.py  test_ports.py  test_process.py  test_registry.py  test_release_script.py  test_rendering.py  test_state_workspace.py  test_status.py  test_teardown.py  test_workflow_maintenance.py  test_workflow_processes.py  test_workflow_shared.py  test_workflow_views.py  test_workflow_worktrees.py  test_workflows.py  test_workspace_facts.py
(+23 files in other folders)
