[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonsai"
version = "0.1.7"
description = "Manage per-branch git worktrees with ports and Caddy URLs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Michael" }]
dependencies = [
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.scripts]
bonsai = "bonsai.cli:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bonsai"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/.git",
  "/.worktrees",
  "/docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
